--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,7 +1,7 @@
 body{font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: black;
-    background-color: beige;
+    background-color: darkgrey;
 }
 li{ font-size: 15px;
     font-style: italic;
@@ -12,8 +12,7 @@ text-decoration: none;}
 
 a:hover{
     text-decoration: underline;
-    /* font-weight: bold;
-    font-size: 18px; */
+
 }
 a:visited{color:yellow;}
 .MyResumeHeading{font-weight: bold;
@@ -21,8 +20,3 @@ a:visited{color:yellow;}
 }
 .underline{text-decoration: underline;}
 .justiy{text-align: justify;}
-
-.homebg{
-    background-image: url('../images/178513.jpg');
-    background-position: top right;
-}
